--- a/lib/src/components/base-modal/base-modal.css
+++ b/lib/src/components/base-modal/base-modal.css
@@ -61,7 +61,7 @@
   min-width: 200px;
   min-height: 200px;
   height: auto;
-  background: #fff;
+  background: var(--base-color-white);
   z-index: 1000;
   overflow-y: scroll;
   overflow-x: hidden;
