--- a/lib/src/components/base-radio/base-radio.css
+++ b/lib/src/components/base-radio/base-radio.css
@@ -1,8 +1,11 @@
 :host {
+  --base-radio-focus-color: var(--base-color-focus);
   --base-radio-height: var(--base-size-md);
+  --base-radio-box-bg-color: var(--base-color-white);
 }
 
 :host {
+  vertical-align: middle;
   outline: 0;
   height: var(--base-radio-height);
   cursor: pointer;
@@ -17,34 +20,11 @@
   margin-right: 0;
 }
 
-:host([size="sm"]) {
-  --base-radio-height: var(--base-size-sm);
-}
-
-:host([size="md"]) {
-  --base-radio-height: var(--base-size-md);
-}
-
-:host([size="lg"]) {
-  --base-radio-height: var(--base-size-lg);
-}
-
-:host [part="box"] {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin-right: var(--base-space-xs);
-  border: 2px solid var(--base-color-ui-light);
-  border-radius: 50%;
-  background: var(--hw-color-white);
-  width: calc(var(--base-radio-height) - var(--base-space-md));
-  height: calc(var(--base-radio-height) - var(--base-space-md));
-  transition: border-color 0.3s ease, max-height 0.3s ease, transform 0.3s ease;
-}
-
-:host(:focus) [part="box"] {
-  box-shadow: 0 0 3px 0 var(--base-color-focus);
+:host [part="input-field"] {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  vertical-align: middle;
 }
 
 :host [part="label"] {
@@ -55,24 +35,52 @@
   margin-left: var(--base-space-xs);
 }
 
-:host [part="input-field"] {
-  position: absolute;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  vertical-align: middle;
+:host [part="box"] {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-right: var(--base-space-xs);
+  border: 2px solid var(--base-color-ui-light);
+  border-radius: 50%;
+  background: var(--base-radio-box-bg-color);
+  width: calc(var(--base-radio-height) - var(--base-space-md));
+  height: calc(var(--base-radio-height) - var(--base-space-md));
+  transition: border-color 0.3s ease, max-height 0.3s ease, transform 0.3s ease;
+}
+
+:host(:focus) [part="box"] {
+  box-shadow: 0 0 0 2px var(--base-radio-focus-color);
 }
 
 :host(:hover:not([disabled]):not([checked])) [part="box"] {
-  background-color: var(--base-color-ui-lighter);
+  --base-radio-box-bg-color: var(--base-color-ui-lighter);
 }
 
 :host([checked]) [part="box"] {
-  border-color: var(--base-color-focus);
+  border-color: var(--base-radio-focus-color);
+}
+
+:host [part="indicator"] {
+  color: var(--base-radio-focus-color);
+  fill: currentColor;
 }
 
 :host([checked]) [part="indicator"] i {
   border-radius: 50%;
   width: 60%;
   height: 60%;
-  background: var(--base-color-focus);
+  background: var(--base-radio-focus-color);
+}
+
+:host([size="sm"]) {
+  --base-radio-height: var(--base-size-sm);
+}
+
+:host([size="md"]) {
+  --base-radio-height: var(--base-size-md);
+}
+
+:host([size="lg"]) {
+  --base-radio-height: var(--base-size-lg);
 }
