--- a/lib/src/components/base-accordion/base-accordion.css
+++ b/lib/src/components/base-accordion/base-accordion.css
@@ -18,13 +18,11 @@
   display: block;
   width: 100%;
   overflow: hidden;
-  max-height: 0;
-  transition: max-height 0.5s ease;
+  transition: max-height 0.3s ease;
 }
 
-:host([open]) [part="content"] {
-  max-height: 500px;
-  transition: max-height 0.3s ease-in;
+:host(:not([open])) [part="content"] {
+  max-height: 0;
 }
 
 :host [part="title"] {
