--- a/lib/src/components/base-input/base-input.css
+++ b/lib/src/components/base-input/base-input.css
@@ -1,5 +1,6 @@
 :host {
   --base-input-bg-color: var(--base-color-white);
+  --base-input-padding: 0 var(--base-space-md);
   --base-input-height: var(--base-size-md);
   --base-input-border-color: var(--base-color-ui-light);
   --base-input-border-radius: none;
@@ -12,6 +13,21 @@
   vertical-align: middle;
   min-width: 200px;
   display: inline-block;
+}
+
+:host([size="sm"]) {
+  --base-input-height: var(--base-size-sm);
+  --base-input-padding: 0 var(--base-space-sm);
+}
+
+:host([size="md"]) {
+  --base-input-height: var(--base-size-md);
+  --base-input-padding: 0 var(--base-space-md);
+}
+
+:host([size="lg"]) {
+  --base-input-height: var(--base-size-lg);
+  --base-input-padding: 0 var(--base-space-md);
 }
 
 :host([full]) {
@@ -53,6 +69,7 @@
 }
 
 :host [part="input-field"] {
+  text-align: inherit;
   color: var(--base-color-font);
   background-color: var(--base-input-bg-color);
   width: 100%;
@@ -61,7 +78,7 @@
   height: 100%;
   outline: 0;
   border: 0;
-  padding: 0 var(--base-space-md);
+  padding: var(--base-input-padding);
 }
 
 :host [part="input-field"]::placeholder {
