reset accordion trigger styles

--- a/lib/src/components/accordion/accordion.css
+++ b/lib/src/components/accordion/accordion.css
@@ -26,6 +26,8 @@
 }
 
 :host [part="trigger"] {
+  background: transparent;
+  color: inherit;
   cursor: pointer;
   text-align: left;
   padding: 0;
